# 0.8.0 - not released yet
- Replaced Ink and Stencil with SwiftMarkdown, see https://github.com/loopwerk/Saga/pull/3

# 0.7.0 - 2021-02-03
- Complete API redesign, see https://github.com/loopwerk/Saga/pull/1

# 0.6.0 - 2021-02-02
- Pages can set their own custom template

# 0.5.0 - 2021-02-02
- The `read` function's `metadata` parameter now defaults to `EmptyMetadata.self`

# 0.4.0 - 2021-01-31
- `Saga.rootPath`, `Saga.inputPath`, and `Saga.outputPath` are now public

# 0.3.0 - 2021-01-30
- Added `lastModified` to `Page`

# 0.4.0 - 2021-01-30
- `Saga.fileStorage` is now public

# 0.1.0 - 2021-01-29
- Initial release