@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{{ site.name }}: {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="/static/style.css" />
   </head>
   <body>
