@@ -2,21 +2,23 @@ import Foundation
 import PathKit
 import Stencil
 
-public class Saga {
+public class Saga<SiteMetadata: Metadata> {
   public let rootPath: Path
   public let inputPath: Path
   public let outputPath: Path
   public let templates: Path
+  public let siteMetadata: SiteMetadata
 
   public let fileStorage: [FileContainer]
   internal var processSteps = [AnyProcessStep]()
 
-  public init(input: Path, output: Path, templates: Path, originFilePath: StaticString = #file) throws {
+  public init(input: Path, output: Path, templates: Path, siteMetadata: SiteMetadata, originFilePath: StaticString = #file) throws {
     let originFile = Path("\(originFilePath)")
     rootPath = try originFile.resolveSwiftPackageFolder()
     inputPath = rootPath + input
     outputPath = rootPath + output
     self.templates = templates
+    self.siteMetadata = siteMetadata
 
     // 1. Find all files in the source folder
     let files = try inputPath.recursiveChildren().filter(\.isFile)
@@ -35,7 +37,7 @@ public class Saga {
   }
 
   @discardableResult
-  public func register<M: Metadata>(folder: Path? = nil, metadata: M.Type, readers: [Reader<M>], filter: @escaping ((Page<M>) -> Bool) = { _ in true }, writers: [Writer<M>]) throws -> Self {
+  public func register<M: Metadata>(folder: Path? = nil, metadata: M.Type, readers: [Reader<M>], filter: @escaping ((Page<M>) -> Bool) = { _ in true }, writers: [Writer<M, SiteMetadata>]) throws -> Self {
     let step = ProcessStep(folder: folder, readers: readers, filter: filter, writers: writers)
     self.processSteps.append(
       .init(
@@ -43,7 +45,8 @@ public class Saga {
         fileStorage: fileStorage,
         inputPath: inputPath,
         outputPath: outputPath,
-        environment: getEnvironment()
+        environment: getEnvironment(),
+        siteMetadata: siteMetadata
       ))
     return self
   }
