@@ -1,5 +1,6 @@
 # 0.8.0 - not released yet
 - Replaced Ink and Stencil with SwiftMarkdown, see https://github.com/loopwerk/Saga/pull/3
+- Added a way to supply custom SiteMetadata, which will be given to every template
 
 # 0.7.0 - 2021-02-03
 - Complete API redesign, see https://github.com/loopwerk/Saga/pull/1
